# cq

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  404.html  AGENTS.md  C4_PRD.md  C4_State_Machine_Specification.md  C4_User_Journey_and_Operational_Flow.md  CHANGELOG.md  CLAUDE.md  CNAME  DB_SCHEMA.html  GEMINI.md  LICENSE  LICENSE.md  PLAN.md  README.ko.md  README.md  get-c4.sh  go.mod  hashmap.json  index.html  install-remote.sh  install.sh  llms.txt  pricing.html  pyproject.toml  todo.md  troubleshooting.html
.c9/: .gitignore  RESEARCH_LOG.md  state.yaml  state.yaml.example
.claude/: IMPLEMENTATION.md  agents-README.md  hooks.json  settings.json
.codex/: README.md
.cursor/: hooks.json  mcp.json
.gemini/: GEMINI.md  README.md  playbook.md  settings.json  tools.md
.github/: FUNDING.yml
.opencode/: config.example.json
.serena/: project.yml
_mnist_exp/: cq.yaml  run.sh  train.py
assets/: DB_SCHEMA.md.CdEv2t3s.js  DB_SCHEMA.md.CdEv2t3s.lean.js  app.CReEuVIi.js  app.CT63hnEz.js  conventions_agent-conventions.md.aaoeODaL.js  conventions_agent-conventions.md.aaoeODaL.lean.js  conventions_agent-edge-declaration.md.Ce1SZvLE.js  conventions_agent-edge-declaration.md.Ce1SZvLE.lean.js  conventions_agent-edge-declaration.md.rp3h312S.js  conventions_agent-edge-declaration.md.rp3h312S.lean.js  decisions_R-ARR-8-review.md.7xGT_PnG.js  decisions_R-ARR-8-review.md.7xGT_PnG.lean.js  decisions_README.md.DOPy0PJD.js  decisions_README.md.DOPy0PJD.lean.js  examples_bug-fix.md.B4FmYWT-.js  examples_bug-fix.md.B4FmYWT-.lean.js  examples_chatgpt-to-claude.md.DXe7ZAEE.js  examples_chatgpt-to-claude.md.DXe7ZAEE.lean.js  examples_distributed-experiments.md.BRyVI7rT.js  examples_distributed-experiments.md.BRyVI7rT.lean.js  examples_dogfooding-session.md.D5KX2taR.js  examples_dogfooding-session.md.D5KX2taR.lean.js  examples_feature-planning.md.BqvU2Im-.js  examples_feature-planning.md.BqvU2Im-.lean.js  examples_first-task.md.BCImkux0.js  examples_first-task.md.BCImkux0.lean.js  examples_growth-loop-in-action.md.D1J7cu3V.js  examples_growth-loop-in-action.md.D1J7cu3V.lean.js  examples_idea-sessions.md.DmnOGeUE.js  examples_idea-sessions.md.DmnOGeUE.lean.js  examples_remote-mcp.md.ChGLdeKa.js  examples_remote-mcp.md.ChGLdeKa.lean.js  examples_research-loop.md.DcSr-_cE.js  examples_research-loop.md.DcSr-_cE.lean.js  examples_researcher-workflow.md.g67rsYIB.js  examples_researcher-workflow.md.g67rsYIB.lean.js  for_ai.md.DNrLf6QM.js  for_ai.md.DNrLf6QM.lean.js  for_backend.md.B3s1Pb6T.js  for_backend.md.B3s1Pb6T.lean.js  (+120 more)
c1/: .gitignore  README.md  index.html  index.ts  integration.test.ts  package.json  pnpm-lock.yaml  vite.config.ts
c1/src-tauri/: Cargo.toml  tauri.conf.json
c1/src-tauri/src/: analytics.rs  auth.rs  cloud.rs  commands.rs  documents.rs  eventbus.rs  hands.rs  knowledge.rs  lib.rs  main.rs  messaging.rs  models.rs  realtime.rs  scanner.rs  watcher.rs
c1/src-tauri/src/providers/: claude_code.rs  codex_cli.rs  cursor.rs  gemini.rs  gemini_cli.rs  mod.rs
c4/: __init__.py  bundle.py  claude_hooks.py  cli.py  constants.py  git_hooks.py  hooks.py  interfaces.py  mcp_server.py  models.py  review_parser.py  state_machine.py  validation.py
c4-core/: .gitignore  .golangci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  coverage.out  go.mod  go.sum
c4d/: bundle.py  cli.py  mcp_server.py  models.py  state_machine.py  supervisor.py  validation.py
c5/: .dockerignore  Dockerfile  Dockerfile.worker  c5.db-shm  c5.db-wal  docker-compose.yml  embed.go  fly.toml  go.mod  go.sum  install.sh  llms.txt
canvas-app/: index.html  package.json  pnpm-lock.yaml
canvas-app/src-tauri/: Cargo.toml  tauri.conf.json
canvas-app/src-tauri/capabilities/: default.json
canvas-app/src-tauri/src/: commands.rs  layout.rs  lib.rs  main.rs  models.rs  scanner.rs
canvas-app/src-tauri/src/providers/: claude_code.rs  codex_cli.rs  cursor.rs  gemini_cli.rs  mod.rs
configs/: connected.yaml  full.yaml  solo.yaml
conventions/: agent-conventions.html  agent-edge-declaration.html
decisions/: R-ARR-8-review.html  README.html
docker/: Dockerfile  Dockerfile.api  build.sh  docker-compose.yml  entrypoint.sh  test.sh
docs/: ARCHITECTURE.md  CHECKPOINTS.md  DONE.md  PHASES.md  PLAN.md  PLAN_AUTOMATION.md  ROADMAP.md  ROADMAP_SUMMARY.md  antipattern-hooks-install.md  c4-to-cq-rename-issues.md  c4-to-cq-rename-review.md  c9-state-schema.md  config-guide.md  deployment-topology.md  developer-experience.md  index.md  package-lock.json  package.json  plan-c-edge-deploy.md  plan-c1-execution-host.md  plan-c3-c5-events-b-a.md  plan-system-check-dogfood.md  usage-guide.md
examples/: bug-fix.html  chatgpt-to-claude.html  distributed-experiments.html  dogfooding-session.html  feature-planning.html  first-task.html  growth-loop-in-action.html  idea-sessions.html  remote-mcp.html  research-loop.html  researcher-workflow.html
for/: ai.html  backend.html  developers.html  pm.html  researchers.html  web.html
guide/: craft.html  dag-cron.html  dogfooding.html  growth-loop.html  install.html  quickstart.html  relay.html  remote-brain.html  tiers.html  worker-setup.html  worker.html
ir/: investment-memo.html  relay-auth-diagnosis.html  relay-auth-review-R-RAR-0.html
ko/: index.html
launch/: hn-post.html
pilot/: LAUNCH.html  README.html  feature-freeze-checklist.html  invite-template.html
prompts/: supervisor.md.j2  worker_ralph.md
reference/: architecture.html  commands.html  skills.html  tools.html
retrospective/: cq-v2-promises-v1.66.html
scripts/: benchmark_lsp.py  c4-alchemy.sh  c9-check.sh  c9-conference-persona.md  c9-conference.sh  c9-notify.sh  c9-run.sh  c9-state-api.py  c9-survey-persona.md  c9-survey.sh  c9-watch.sh  claude-headless.sh  debate-scientist-persona.md  demo-drive-hub-e2e.sh  gemini-debate.sh  gemini-headless.sh  generate_agent_yamls.py  lint-skills.sh  llm-call.sh  smoke_test_gpu_worker.sh  soul-check.sh  soul-evolve.sh  supabase_rls_setup.sql  test-gpu-e2e.sh  test-install.sh
standards/: agents.md  manifest.yaml
tests/: __init__.py  (+13 more)
(+3045 files in other folders)
