[project]
name = "c4-bridge"
version = "0.10.0"
description = "C4 Python sidecar — LSP and doc parsing bridge for cq"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
c4-bridge = "c4.bridge.sidecar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["c4"]
