[package]
name = "c1"
version = "0.1.0"
description = "C1 (See) — Claude Code Project Explorer"
authors = ["C4 Project"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "c1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
chrono = "0.4"
regex = "1"
anyhow = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
open = "5"
notify = { version = "6.1.1", features = ["macos_fsevent"] }
lru = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
